# pretix-multisafepay

./: .gitignore  .update-locales  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml
pretix_multisafepay/: __init__.py  apps.py  payment.py  signals.py  urls.py  views.py
pretix_multisafepay/locale/: django.pot
pretix_multisafepay/locale/nl/LC_MESSAGES/: django.po
pretix_multisafepay/templates/pretix_multisafepay/: pending.html
